--- a/rust/views/index.html
+++ b/rust/views/index.html
@@ -7,10 +7,12 @@
   <link href="./output.css" rel="stylesheet">
 </head>
 
-<body class="h-full dark:bg-slate-900 bg-slate-200 relative">
-  <div class="flex justify-center p-4 gap-x-2 sticky top-0
+<body class="h-full dark:bg-slate-900 bg-slate-200 md:relative">
+  <div class="flex justify-center p-4 gap-x-2
+  md:sticky md:top-0
+  fixed bottom-0 inset-x-0
   bg-slate-200/40 dark:bg-slate-900/40
-  border-b-2
+  md:border-b-2 border-t-2
   border-slate-300 dark:border-slate-700
   backdrop-blur-md">
     <div class="
