--- a/rust/src/input.css
+++ b/rust/src/input.css
@@ -7,3 +7,15 @@
     @apply p-6 bg-slate-100 dark:bg-slate-800 border-slate-300 dark:border-slate-700 dark:text-slate-300 border-b-2 border dark:shadow-slate-700/80 shadow rounded-lg;
   }
 }
+
+.m-fadeOut {
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s linear 300ms, opacity 300ms;
+}
+
+.m-fadeIn {
+  visibility: visible;
+  opacity: 1;
+  transition: visibility 0s linear 0s, opacity 300ms;
+}
