--- a/rust/src/output.css
+++ b/rust/src/output.css
@@ -598,44 +598,32 @@ video {
   bottom: 0px;
 }
 
-.right-0 {
-  right: 0px;
-}
-
-.right-5 {
-  right: 1.25rem;
-}
-
-.right-8 {
-  right: 2rem;
-}
-
-.top-8 {
-  top: 2rem;
-}
-
-.top-1 {
-  top: 0.25rem;
-}
-
-.top-2 {
-  top: 0.5rem;
-}
-
-.top-7 {
-  top: 1.75rem;
-}
-
-.right-10 {
-  right: 2.5rem;
+.right-24 {
+  right: 6rem;
 }
 
 .right-7 {
   right: 1.75rem;
 }
 
+.top-0 {
+  top: 0px;
+}
+
 .top-6 {
   top: 1.5rem;
+}
+
+.order-last {
+  order: 9999;
+}
+
+.m-4 {
+  margin: 1rem;
+}
+
+.m-8 {
+  margin: 2rem;
 }
 
 .mx-4 {
@@ -651,12 +639,20 @@ video {
   margin-top: 1rem;
 }
 
-.ml-auto {
-  margin-left: auto;
+.mt-8 {
+  margin-top: 2rem;
+}
+
+.box-border {
+  box-sizing: border-box;
 }
 
 .flex {
   display: flex;
+}
+
+.contents {
+  display: contents;
 }
 
 .size-6 {
@@ -664,44 +660,60 @@ video {
   height: 1.5rem;
 }
 
-.h-4 {
-  height: 1rem;
+.h-12 {
+  height: 3rem;
 }
 
 .h-full {
   height: 100%;
 }
 
+.h-48 {
+  height: 12rem;
+}
+
+.h-96 {
+  height: 24rem;
+}
+
+.h-screen {
+  height: 100vh;
+}
+
+.h-auto {
+  height: auto;
+}
+
 .h-10 {
   height: 2.5rem;
 }
 
-.h-12 {
-  height: 3rem;
-}
-
-.w-4 {
-  width: 1rem;
-}
-
-.w-5 {
-  width: 1.25rem;
-}
-
-.w-8 {
-  width: 2rem;
-}
-
-.w-10 {
-  width: 2.5rem;
+.min-h-full {
+  min-height: 100%;
 }
 
 .w-12 {
   width: 3rem;
 }
 
+.w-8 {
+  width: 2rem;
+}
+
+.w-full {
+  width: 100%;
+}
+
+.w-auto {
+  width: auto;
+}
+
 .flex-1 {
   flex: 1 1 0%;
+}
+
+.resize-none {
+  resize: none;
 }
 
 .flex-col {
@@ -725,12 +737,16 @@ video {
        column-gap: 0.5rem;
 }
 
-.rounded-xl {
-  border-radius: 0.75rem;
+.overflow-scroll {
+  overflow: scroll;
 }
 
 .rounded-full {
   border-radius: 9999px;
+}
+
+.rounded-xl {
+  border-radius: 0.75rem;
 }
 
 .border {
@@ -778,22 +794,6 @@ video {
   fill: currentColor;
 }
 
-.fill-lime-400 {
-  fill: #a3e635;
-}
-
-.fill-lime-600 {
-  fill: #65a30d;
-}
-
-.fill-lime-500 {
-  fill: #84cc16;
-}
-
-.stroke-lime-400 {
-  stroke: #a3e635;
-}
-
 .stroke-lime-500 {
   stroke: #84cc16;
 }
@@ -814,6 +814,20 @@ video {
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
+.font-medium {
+  font-weight: 500;
 }
 
 .text-lime-700 {
@@ -843,10 +857,8 @@ video {
   backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
-.transition {
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+.transition-all {
+  transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
@@ -857,8 +869,24 @@ video {
   transition-duration: 150ms;
 }
 
+.duration-100 {
+  transition-duration: 100ms;
+}
+
 .duration-500 {
   transition-duration: 500ms;
+}
+
+.m-fadeOut {
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s linear 300ms, opacity 300ms;
+}
+
+.m-fadeIn {
+  visibility: visible;
+  opacity: 1;
+  transition: visibility 0s linear 0s, opacity 300ms;
 }
 
 .hover\:shadow:hover {
@@ -873,8 +901,8 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.hover\:shadow-lime-400\/30:hover {
-  --tw-shadow-color: rgb(163 230 53 / 0.3);
+.hover\:shadow-lime-400\/10:hover {
+  --tw-shadow-color: rgb(163 230 53 / 0.1);
   --tw-shadow: var(--tw-shadow-colored);
 }
 
@@ -889,6 +917,24 @@ video {
   outline-offset: 2px;
 }
 
+.active\:scale-95:active {
+  --tw-scale-x: .95;
+  --tw-scale-y: .95;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.active\:border-b:active {
+  border-bottom-width: 1px;
+}
+
+.active\:border-b-0:active {
+  border-bottom-width: 0px;
+}
+
+.active\:border-t-2:active {
+  border-top-width: 2px;
+}
+
 @media (min-width: 768px) {
   .md\:relative {
     position: relative;
@@ -900,6 +946,14 @@ video {
 
   .md\:top-0 {
     top: 0px;
+  }
+
+  .md\:order-1 {
+    order: 1;
+  }
+
+  .md\:order-first {
+    order: -9999;
   }
 
   .md\:mx-10 {
@@ -954,10 +1008,6 @@ video {
     background-color: rgb(15 23 42 / 0.4);
   }
 
-  .dark\:fill-lime-400 {
-    fill: #a3e635;
-  }
-
   .dark\:stroke-lime-400 {
     stroke: #a3e635;
   }
@@ -972,28 +1022,18 @@ video {
     color: rgb(203 213 225 / var(--tw-text-opacity));
   }
 
-  .dark\:shadow-slate-700\/80 {
-    --tw-shadow-color: rgb(51 65 85 / 0.8);
-    --tw-shadow: var(--tw-shadow-colored);
-  }
-
-  .dark\:shadow-slate-500\/80 {
-    --tw-shadow-color: rgb(100 116 139 / 0.8);
-    --tw-shadow: var(--tw-shadow-colored);
-  }
-
-  .dark\:shadow-slate-900\/80 {
-    --tw-shadow-color: rgb(15 23 42 / 0.8);
-    --tw-shadow: var(--tw-shadow-colored);
-  }
-
-  .dark\:shadow-slate-700\/20 {
-    --tw-shadow-color: rgb(51 65 85 / 0.2);
-    --tw-shadow: var(--tw-shadow-colored);
+  .dark\:text-white {
+    --tw-text-opacity: 1;
+    color: rgb(255 255 255 / var(--tw-text-opacity));
   }
 
   .dark\:shadow-slate-700\/40 {
     --tw-shadow-color: rgb(51 65 85 / 0.4);
+    --tw-shadow: var(--tw-shadow-colored);
+  }
+
+  .dark\:shadow-slate-700\/80 {
+    --tw-shadow-color: rgb(51 65 85 / 0.8);
     --tw-shadow: var(--tw-shadow-colored);
   }
 
