--- a/rust/src/input.css
+++ b/rust/src/input.css
@@ -6,6 +6,10 @@
   .card {
     @apply p-6 bg-slate-100 dark:bg-slate-800 border-slate-300 dark:border-slate-700 dark:text-slate-300 border-b-2 border dark:shadow-slate-700/80 shadow rounded-lg;
   }
+
+  .chiplet {
+    @apply bg-lime-800 p-2 rounded-full border-lime-700 border-2 min-w-24 text-center;
+  }
 }
 
 .m-fadeOut {
