--- a/rust/src/output.css
+++ b/rust/src/output.css
@@ -581,6 +581,18 @@ video {
   }
 }
 
+.chiplet {
+  min-width: 6rem;
+  border-radius: 9999px;
+  border-width: 2px;
+  --tw-border-opacity: 1;
+  border-color: rgb(77 124 15 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(63 98 18 / var(--tw-bg-opacity));
+  padding: 0.5rem;
+  text-align: center;
+}
+
 .fixed {
   position: fixed;
 }
@@ -596,10 +608,6 @@ video {
 
 .bottom-0 {
   bottom: 0px;
-}
-
-.right-24 {
-  right: 6rem;
 }
 
 .right-7 {
@@ -618,14 +626,6 @@ video {
   order: 9999;
 }
 
-.m-4 {
-  margin: 1rem;
-}
-
-.m-8 {
-  margin: 2rem;
-}
-
 .mx-4 {
   margin-left: 1rem;
   margin-right: 1rem;
@@ -637,14 +637,6 @@ video {
 
 .mt-4 {
   margin-top: 1rem;
-}
-
-.mt-8 {
-  margin-top: 2rem;
-}
-
-.box-border {
-  box-sizing: border-box;
 }
 
 .flex {
@@ -668,30 +660,6 @@ video {
   height: 100%;
 }
 
-.h-48 {
-  height: 12rem;
-}
-
-.h-96 {
-  height: 24rem;
-}
-
-.h-screen {
-  height: 100vh;
-}
-
-.h-auto {
-  height: auto;
-}
-
-.h-10 {
-  height: 2.5rem;
-}
-
-.min-h-full {
-  min-height: 100%;
-}
-
 .w-12 {
   width: 3rem;
 }
@@ -700,12 +668,12 @@ video {
   width: 2rem;
 }
 
-.w-full {
-  width: 100%;
-}
-
 .w-auto {
   width: auto;
+}
+
+.w-full {
+  width: 100%;
 }
 
 .flex-1 {
@@ -816,9 +784,9 @@ video {
   padding-bottom: 0.5rem;
 }
 
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .text-xl {
@@ -936,20 +904,12 @@ video {
 }
 
 @media (min-width: 768px) {
-  .md\:relative {
-    position: relative;
-  }
-
   .md\:sticky {
     position: sticky;
   }
 
   .md\:top-0 {
     top: 0px;
-  }
-
-  .md\:order-1 {
-    order: 1;
   }
 
   .md\:order-first {
