feat(ui): scrollable ingredient labels

--- a/rust/src/output.css
+++ b/rust/src/output.css
@@ -582,6 +582,8 @@ video {
 }
 
 .chiplet {
+  min-height: -moz-fit-content;
+  min-height: fit-content;
   min-width: 6rem;
   border-radius: 9999px;
   border-width: 2px;
@@ -660,6 +662,11 @@ video {
   height: 100%;
 }
 
+.min-h-fit {
+  min-height: -moz-fit-content;
+  min-height: fit-content;
+}
+
 .w-12 {
   width: 3rem;
 }
@@ -707,6 +714,10 @@ video {
 
 .overflow-scroll {
   overflow: scroll;
+}
+
+.overflow-x-auto {
+  overflow-x: auto;
 }
 
 .rounded-full {
