--- a/rust/src/input.css
+++ b/rust/src/input.css
@@ -8,7 +8,7 @@
   }
 
   .chiplet {
-    @apply bg-lime-800 p-2 rounded-full border-lime-700 border-2 min-w-24 text-center;
+    @apply bg-lime-800 p-2 rounded-full border-lime-700 border-2 min-w-24 text-center min-h-fit;
   }
 }
 
